ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npe4__Relationship_Settings__c/fields/npe4__DISABLE_RelationshipContacts_trigger__c.field-meta.xml
<CustomField>
    <fullName>npe4__DISABLE_RelationshipContacts_trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
    <inlineHelpText>DISABLES the RelationshipContacts.trigger (Contact, after delete)
- checking this box will disable a trigger.  This can cause erratic and unpredictable behavior in your NPSP.  FOR ADVANCED CONSULTANT AND DEVELOPERS ONLY.</inlineHelpText>
    <label>DEPRECATED-Disable_RelContacts_trigger</label>
    <type>Checkbox</type>
</CustomField>