ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npe4__Relationship_Settings__c/fields/npe4__DISABLE_Relationships_trigger__c.field-meta.xml
<CustomField>
    <fullName>npe4__DISABLE_Relationships_trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
    <inlineHelpText>DISABLES the Relationships.trigger (Relationship__c, before insert, before update, before delete, after insert, after update, after delete, after undelete)
- checking this box will disable a trigger. This can cause erratic and unpredictable behavior in y</inlineHelpText>
    <label>DEPRECATED-Disable_Relationships_trigger</label>
    <type>Checkbox</type>
</CustomField>