ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npe4__Relationship_Settings__c/fields/npe4__Force_Synchronous_Auto_Create__c.field-meta.xml
<CustomField>
    <fullName>npe4__Force_Synchronous_Auto_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DEPRECATED.  This setting is not used.</description>
    <inlineHelpText>Forces the Relationships package to synchronously process the auto creation of relationships for auto-create functionality</inlineHelpText>
    <label>DEPRECATED-Force Synchronous Auto Create</label>
    <type>Checkbox</type>
</CustomField>